--- a/config/content.htm
+++ b/config/content.htm
@@ -55,4 +55,13 @@
 <p>Week4</p>
 <p>自主練習</p>
 <p>Week5</p>
-<p></p>
+<p>solvespace操作</p>
+<p>1.打開solvespace</p>
+<p>2.畫出一個正方體</p>
+<p>3.改顏色和透明度</p>
+<p>4.儲存成html檔</p>
+<p>5.把編譯過的text.html檔打開編譯</p>
+<p>6.打指令</p>
+<p>7.完成</p>
+<p>以下是我的操作影片</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/6nf7AtP1cXo" width="560"></iframe></p>
