--- a/config/content.htm
+++ b/config/content.htm
@@ -65,3 +65,8 @@
 <p>7.完成</p>
 <p>以下是我的操作影片</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/6nf7AtP1cXo" width="560"></iframe></p>
+<p>Week6</p>
+<p>V-rep 網際 Python remote API ython remote API 雙輪車控制模擬</p>
+<p><img src="https://s40723244.github.io/cad2019/images/1_Kr-r8E0ExCQeu4AyPNq1eg.gif"/></p>
+<p></p>
+<p></p>
