--- a/content/Week plan.html
+++ b/content/Week plan.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html>
         <head>
-        <title>CMSiMDE</title>
+        <title>s40723245 cad2019</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
@@ -205,7 +205,12 @@ img.add_border {
 <p>6.打指令</p>
 <p>7.完成</p>
 <p>以下是我的操作影片</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/6nf7AtP1cXo" width="560"></iframe></p><br />Develop << <a href='Develop.html'>Previous</a> </div>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/6nf7AtP1cXo" width="560"></iframe></p>
+<p>Week6</p>
+<p>V-rep 網際 Python remote API ython remote API 雙輪車控制模擬</p>
+<p><img src="https://s40723244.github.io/cad2019/images/1_Kr-r8E0ExCQeu4AyPNq1eg.gif"/></p>
+<p></p>
+<p></p><br />Develop << <a href='Develop.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
