--- a/content/Mid-team work.html
+++ b/content/Mid-team work.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li><a href='Week plan.html'>Week plan</a></li>
+                     <li><a href='Week.html'>Week</a><li><a href='Team menber.html'>Team menber</a><li><a href='Note.html'>Note</a><li><a href='Mid-team work.html'>Mid-team work</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,11 +154,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='Week plan.html'>Next</a> >> Week plan<br /><h1>Develop</h1>
-<p><a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 的開發, 可以在一個目錄中放入 cmsimde, 然後將 up_dir 中的內容放到與 cmsimde 目錄同位階的地方, 使用 command 進入 cmsimde 目錄, 執行 python wsgi.py, 就可以啟動, 以瀏覽器 https://localhost:9443 就可以連接, 以 admin 作為管理者密碼, 就可以登入維護內容.</p>
-<p>cmsimde 的開發採用 Leo Editor, 開啟 cmsimde 目錄中的 cmsimde.leo 就可以進行程式修改, 結束後, 若要保留網際內容, 只要將 cmsimde 外部的內容倒回 up_dir 目錄中即可後續對 cmsimde 遠端倉儲進行改版.</p>
-<p>init.py 位於  up_dir 目錄, 可以設定 site_title 與 uwsgi 等變數.</p>
-<br />About << <a href='About.html'>Previous</a> <a href='Week plan.html'>Next</a> >> Week plan</div>
+    <div id="tipue_search_content">Note << <a href='Note.html'>Previous</a> <br /><h1>Mid-team work</h1><br />Note << <a href='Note.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
