--- a/content/Team menber.html
+++ b/content/Team menber.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li><a href='Week plan.html'>Week plan</a></li>
+                     <li><a href='Week.html'>Week</a><li><a href='Team menber.html'>Team menber</a><li><a href='Note.html'>Note</a><li><a href='Mid-team work.html'>Mid-team work</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,63 +154,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Develop << <a href='Develop.html'>Previous</a> <br /><h1>Week plan</h1>
-<p>Week1</p>
-<p>中秋烤肉連假</p>
-<p>Week2</p>
-<p>1.建立一個新的倉儲命名為cad2019</p>
-<p>2.下載2b</p>
-<p>3.更改start裡編譯器的路徑到隨身碟的201906fall的data</p>
-<p>4.把倉儲從遠端拉到近端進行更新</p>
-<p>5.git clone 個人倉儲網址.git</p>
-<p>6.輸入git submodule add https://github.com/mdecourse/cmsimde.git cmsimde，載入cmsimde</p>
-<p>7.進入cmsimde開啟倉儲 輸入python wsgi.py</p>
-<p>8.如果flask沒更新，需輸入python -m pip install flask_cors，更新下載flask_cors</p>
-<p>9.到up_dir複製檔案到cad2019目錄下</p>
-<p>10.改完名字上傳即可</p>
-<p>Week3</p>
-<h4>編譯步驟:</h4>
-<p>先將 Y:\portablegit\bin\sh.exe 改名為 sh_rename_for_solvespace.exe (透過 MSYS2 執行 shell 指令, 而非 portablegit 中的 sh.exe)</p>
-<p>git version 查驗 git 版本</p>
-<p>git 2.13 版本以上, 可以使用下列 git clone<span> </span><span>--recurse-submodules 取得所有子模組資料</span></p>
-<p>git clone --recurse-submodules https://github.com/solvespace/solvespace.git solvespace</p>
-<p>上述指令同:</p>
-<p>git clone <span><a href="https://github.com/solvespace/solvespace.git">https://github.com/solvespace/solvespace.git</a> </span></p>
-<p><span>cd solvespace</span></p>
-<p><span>git submodule init</span></p>
-<p><span>git submodule update</span></p>
-<p>edit Y:\tmp\solvespace\extlib\angle\CMakeLists.txt comment out line 713 and 714</p>
-<p>#list(APPEND ANGLE_DEFINITIONS<br/>#"-DANGLE_PRELOADED_D3DCOMPILER_MODULE_NAMES={ \"d3dcompiler_47.dll\", \"d3dcompiler_46.dll\", \"d3dcompiler_43.dll\" }")<br/>endif()</p>
-<p>接著需要手動進行 libpng.dll.a 的編譯, 並改名為 libpng_static.a, 並放到編譯系統的 lib 目錄中 (即隨身系統的 msys64\mingw64\lib 目錄):</p>
-<p>cd solvespace</p>
-<p>cd extlib</p>
-<p>cd libpng</p>
-<p>mkdir build</p>
-<p>cd build</p>
-<p>cmake .. -G "MinGW Makefiles" -DCMAKE_BUILD_TYPE=Release<br/>mingw32-make</p>
-<p>(mingw32-make -Wl,-static)</p>
-<p>rename libpng.dll.a to libpng_static.a and copy to Y:\msys64\mingw64\lib</p>
-<p>接著回到 solvespace 原始碼目錄, 建立 build 目錄後進入 build 目錄, 執行:</p>
-<p><span>cmake .. -G "MinGW Makefiles" -DCMAKE_BUILD_TYPE=Release</span><br/><span>mingw32-make</span></p>
-<p><span>編譯完成後, 可以在 build\bin 目錄中建立 solvespace.exe, 配合相關 dll 檔案後, 即可執行.</span></p>
-<p>Week4</p>
-<p>自主練習</p>
-<p>Week5</p>
-<p>solvespace操作</p>
-<p>1.打開solvespace</p>
-<p>2.畫出一個正方體</p>
-<p>3.改顏色和透明度</p>
-<p>4.儲存成html檔</p>
-<p>5.把編譯過的text.html檔打開編譯</p>
-<p>6.打指令</p>
-<p>7.完成</p>
-<p>以下是我的操作影片</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/6nf7AtP1cXo" width="560"></iframe></p>
-<p>Week6</p>
-<p>V-rep 網際 Python remote API ython remote API 雙輪車控制模擬</p>
-<p><img src="https://s40723244.github.io/cad2019/images/1_Kr-r8E0ExCQeu4AyPNq1eg.gif"/></p>
-<p></p>
-<p></p><br />Develop << <a href='Develop.html'>Previous</a> </div>
+    <div id="tipue_search_content">Week << <a href='Week.html'>Previous</a> <a href='Note.html'>Next</a> >> Note<br /><h1>Team menber</h1>
+<p><span>第 4 組成員:</span><br/><a href="https://github.com/s40723201/cad2019">40723201 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40723201.github.io/cad2019">40723201 網站</a><br/><a href="https://github.com/s40723204/cad2019">40723204 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40723204.github.io/cad2019">40723204 網站</a><br/><a href="https://github.com/s40723213/cad2019">40723213 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40723213.github.io/cad2019">40723213 網站</a><br/><a href="https://github.com/s40723215/cad2019">40723215 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40723215.github.io/cad2019">40723215 網站</a><br/><a href="https://github.com/s40723218/cad2019">40723218 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40723218.github.io/cad2019">40723218 網站</a><br/><a href="https://github.com/s40723219/cad2019">40723219 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40723219.github.io/cad2019">40723219 網站</a><br/><a href="https://github.com/s40723237/cad2019">40723237 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40723237.github.io/cad2019">40723237 網站</a><br/><a href="https://github.com/s40723242/cad2019">40723242 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40723242.github.io/cad2019">40723242 網站</a><br/><a href="https://github.com/s40723243/cad2019">40723243 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40723243.github.io/cad2019">40723243 網站</a><br/><a href="https://github.com/s40723245/cad2019">40723245 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40723245.github.io/cad2019">40723245 網站</a></p>
+<br />Week << <a href='Week.html'>Previous</a> <a href='Note.html'>Next</a> >> Note</div>
         
     <!-- footer -->
       <div class="container">
