--- a/content/week10-14.html
+++ b/content/week10-14.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Week.html'>Week</a><li><a href='Team menber.html'>Team menber</a><li><a href='Note.html'>Note</a><li><a href='Mid-team work.html'>Mid-team work</a></li>
+                     <li class='has-children'><a href='Week.html'>Week</a><ul class='dropdown'><li><a href='Week2-5.html'>Week2-5</a><li><a href='week6-9.html'>week6-9</a><li><a href='week10-14.html'>week10-14</a><li><a href='week15-18.html'>week15-18</a></li></ul><li><a href='Note.html'>Note</a><li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,7 +154,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Note << <a href='Note.html'>Previous</a> <br /><h1>Mid-team work</h1><br />Note << <a href='Note.html'>Previous</a> </div>
+    <div id="tipue_search_content">week6-9 << <a href='week6-9.html'>Previous</a> <a href='week15-18.html'>Next</a> >> week15-18<br /><h1>week10-14</h1>
+<br />week6-9 << <a href='week6-9.html'>Previous</a> <a href='week15-18.html'>Next</a> >> week15-18</div>
         
     <!-- footer -->
       <div class="container">
