--- a/content/week15-18.html
+++ b/content/week15-18.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Week.html'>Week</a><li><a href='Team menber.html'>Team menber</a><li><a href='Note.html'>Note</a><li><a href='Mid-team work.html'>Mid-team work</a></li>
+                     <li class='has-children'><a href='Week.html'>Week</a><ul class='dropdown'><li><a href='Week2-5.html'>Week2-5</a><li><a href='week6-9.html'>week6-9</a><li><a href='week10-14.html'>week10-14</a><li><a href='week15-18.html'>week15-18</a></li></ul><li><a href='Note.html'>Note</a><li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,9 +154,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Week << <a href='Week.html'>Previous</a> <a href='Note.html'>Next</a> >> Note<br /><h1>Team menber</h1>
-<p><span>第 4 組成員:</span><br/><a href="https://github.com/s40723201/cad2019">40723201 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40723201.github.io/cad2019">40723201 網站</a><br/><a href="https://github.com/s40723204/cad2019">40723204 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40723204.github.io/cad2019">40723204 網站</a><br/><a href="https://github.com/s40723213/cad2019">40723213 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40723213.github.io/cad2019">40723213 網站</a><br/><a href="https://github.com/s40723215/cad2019">40723215 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40723215.github.io/cad2019">40723215 網站</a><br/><a href="https://github.com/s40723218/cad2019">40723218 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40723218.github.io/cad2019">40723218 網站</a><br/><a href="https://github.com/s40723219/cad2019">40723219 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40723219.github.io/cad2019">40723219 網站</a><br/><a href="https://github.com/s40723237/cad2019">40723237 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40723237.github.io/cad2019">40723237 網站</a><br/><a href="https://github.com/s40723242/cad2019">40723242 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40723242.github.io/cad2019">40723242 網站</a><br/><a href="https://github.com/s40723243/cad2019">40723243 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40723243.github.io/cad2019">40723243 網站</a><br/><a href="https://github.com/s40723245/cad2019">40723245 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40723245.github.io/cad2019">40723245 網站</a></p>
-<br />Week << <a href='Week.html'>Previous</a> <a href='Note.html'>Next</a> >> Note</div>
+    <div id="tipue_search_content">week10-14 << <a href='week10-14.html'>Previous</a> <a href='Note.html'>Next</a> >> Note<br /><h1>week15-18</h1>
+<br />week10-14 << <a href='week10-14.html'>Previous</a> <a href='Note.html'>Next</a> >> Note</div>
         
     <!-- footer -->
       <div class="container">
