title update part2

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,5 +1,8 @@
 <h1>Week</h1>
-<h2>Week2-5</h2>
+<p><a href="https://s40723245.github.io/cad2019/content/Week2-5.html">week2-5</a></p>
+<p><a href="https://s40723245.github.io/cad2019/content/week6-9.html">week6-9</a></p>
+<p><a href="https://s40723245.github.io/cad2019/content/week10-14.html">week10-14</a></p>
+<p><a href="https://s40723245.github.io/cad2019/content/week15-18.html">week15-18</a></p><h2>Week2-5</h2>
 <p>week1</p>
 <p>中秋烤肉連假</p>
 <p>Week2</p>
@@ -58,7 +61,7 @@
 <h2>week10-14</h2>
 <h2>week15-18</h2>
 <h1>Note</h1>
-<h1>About</h1>
+<p><span style="color: #ff0000;">git submodule add</span> https://github.com/mdecourse/cmsimde.git cmsimde 第一次把cmsimde載入倉儲使用<br/><span style="color: #ff0000;">python -m pip install flask_cors</span> 要更新下載flask_cors<br/><span style="color: #ff0000;">git clone --recurse-submodules</span> <span style="color: #00ff00;">https://github.com/solvespace/solvespace.git solvespace</span><br/>從遠端copy cmsimde必須，綠字部分改cmsimde的網址</p><h1>About</h1>
 <p>此內容管理系統以 <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</p>
 <h4>利用 cmsimde 建立靜態網誌方法:</h4>
 <p>1. 在 github 建立倉儲, git clone 到近端</p>
