--- a/content/Note.html
+++ b/content/Note.html
@@ -155,7 +155,9 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">week15-18 << <a href='week15-18.html'>Previous</a> <a href='About.html'>Next</a> >> About<br /><h1>Note</h1>
-<br />week15-18 << <a href='week15-18.html'>Previous</a> <a href='About.html'>Next</a> >> About</div>
+<p><span style="color: #ff0000;">git submodule add</span> https://github.com/mdecourse/cmsimde.git cmsimde 第一次把cmsimde載入倉儲使用<br/><span style="color: #ff0000;">python -m pip install flask_cors</span> 要更新下載flask_cors<br/><span style="color: #ff0000;">git clone --recurse-submodules</span> <span style="color: #00ff00;">https://github.com/solvespace/solvespace.git solvespace</span><br/>從遠端copy cmsimde必須，綠字部分改cmsimde的網址</p>
+<p>使用學校網路需用proxy</p>
+<p><span style="color: #ff0000;">[http]</span><br/><span style="color: #ff0000;"> proxy = [2001:288:6004:17::7]:3128</span></p><br />week15-18 << <a href='week15-18.html'>Previous</a> <a href='About.html'>Next</a> >> About</div>
         
     <!-- footer -->
       <div class="container">
