--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -2,10 +2,11 @@
 <p><a href="https://s40723245.github.io/cad2019/content/Week2-5.html">week2-5</a></p>
 <p><a href="https://s40723245.github.io/cad2019/content/week6-9.html">week6-9</a></p>
 <p><a href="https://s40723245.github.io/cad2019/content/week10-14.html">week10-14</a></p>
-<p><a href="https://s40723245.github.io/cad2019/content/week15-18.html">week15-18</a></p><h2>Week2-5</h2>
-<p>week1</p>
+<p><a href="https://s40723245.github.io/cad2019/content/week15-18.html">week15-18</a></p>
+<h2>Week2-5</h2>
+<p><span style="color: #ff0000;">week1</span></p>
 <p>中秋烤肉連假</p>
-<p>Week2</p>
+<p><span style="color: #ff0000;">Week2</span></p>
 <p>1.建立一個新的倉儲命名為cad2019</p>
 <p>2.下載2b</p>
 <p>3.更改start裡編譯器的路徑到隨身碟的201906fall的data</p>
@@ -16,7 +17,7 @@
 <p>8.如果flask沒更新，需輸入python -m pip install flask_cors，更新下載flask_cors</p>
 <p>9.到up_dir複製檔案到cad2019目錄下</p>
 <p>10.改完名字上傳即可</p>
-<p>week3</p>
+<p><span style="color: #ff0000;">week3</span></p>
 <h4>編譯步驟:</h4>
 <p>先將 Y:\portablegit\bin\sh.exe 改名為 sh_rename_for_solvespace.exe (透過 MSYS2 執行 shell 指令, 而非 portablegit 中的 sh.exe)</p>
 <p>git version 查驗 git 版本</p>
@@ -55,13 +56,20 @@
 <p>以下是我的操作影片</p>
 <p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="//www.youtube.com/embed/6nf7AtP1cXo" width="560"></iframe></p>
 <h2>week6-9</h2>
-<p>week6</p>
+<p><span style="color: #ff0000;">week6</span></p>
 <p>V-rep 網際 Python remote API ython remote API 雙輪車控制模擬</p>
 <p><img caption="false" height="314" src="/images/1_Kr-r8E0ExCQeu4AyPNq1eg.gif" width="560"/></p>
+<p></p>
+<p><span style="color: #ff0000;">week7</span></p>
+<p>零件18</p>
+<p></p>
 <h2>week10-14</h2>
 <h2>week15-18</h2>
 <h1>Note</h1>
-<p><span style="color: #ff0000;">git submodule add</span> https://github.com/mdecourse/cmsimde.git cmsimde 第一次把cmsimde載入倉儲使用<br/><span style="color: #ff0000;">python -m pip install flask_cors</span> 要更新下載flask_cors<br/><span style="color: #ff0000;">git clone --recurse-submodules</span> <span style="color: #00ff00;">https://github.com/solvespace/solvespace.git solvespace</span><br/>從遠端copy cmsimde必須，綠字部分改cmsimde的網址</p><h1>About</h1>
+<p><span style="color: #ff0000;">git submodule add</span> https://github.com/mdecourse/cmsimde.git cmsimde 第一次把cmsimde載入倉儲使用<br/><span style="color: #ff0000;">python -m pip install flask_cors</span> 要更新下載flask_cors<br/><span style="color: #ff0000;">git clone --recurse-submodules</span> <span style="color: #00ff00;">https://github.com/solvespace/solvespace.git solvespace</span><br/>從遠端copy cmsimde必須，綠字部分改cmsimde的網址</p>
+<p>使用學校網路需用proxy</p>
+<p><span style="color: #ff0000;">[http]</span><br/><span style="color: #ff0000;"> proxy = [2001:288:6004:17::7]:3128</span></p>
+<h1>About</h1>
 <p>此內容管理系統以 <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</p>
 <h4>利用 cmsimde 建立靜態網誌方法:</h4>
 <p>1. 在 github 建立倉儲, git clone 到近端</p>
