--- a/content/Week.html
+++ b/content/Week.html
@@ -158,7 +158,8 @@ img.add_border {
 <p><a href="https://s40723245.github.io/cad2019/content/Week2-5.html">week2-5</a></p>
 <p><a href="https://s40723245.github.io/cad2019/content/week6-9.html">week6-9</a></p>
 <p><a href="https://s40723245.github.io/cad2019/content/week10-14.html">week10-14</a></p>
-<p><a href="https://s40723245.github.io/cad2019/content/week15-18.html">week15-18</a></p><br /> <a href='Week2-5.html'>Next</a> >> Week2-5</div>
+<p><a href="https://s40723245.github.io/cad2019/content/week15-18.html">week15-18</a></p>
+<br /> <a href='Week2-5.html'>Next</a> >> Week2-5</div>
         
     <!-- footer -->
       <div class="container">
