--- a/content/Week2-5.html
+++ b/content/Week2-5.html
@@ -155,9 +155,9 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Week << <a href='Week.html'>Previous</a> <a href='week6-9.html'>Next</a> >> week6-9<br /><h1>Week2-5</h1>
-<p>week1</p>
+<p><span style="color: #ff0000;">week1</span></p>
 <p>中秋烤肉連假</p>
-<p>Week2</p>
+<p><span style="color: #ff0000;">Week2</span></p>
 <p>1.建立一個新的倉儲命名為cad2019</p>
 <p>2.下載2b</p>
 <p>3.更改start裡編譯器的路徑到隨身碟的201906fall的data</p>
@@ -168,7 +168,7 @@ img.add_border {
 <p>8.如果flask沒更新，需輸入python -m pip install flask_cors，更新下載flask_cors</p>
 <p>9.到up_dir複製檔案到cad2019目錄下</p>
 <p>10.改完名字上傳即可</p>
-<p>week3</p>
+<p><span style="color: #ff0000;">week3</span></p>
 <h4>編譯步驟:</h4>
 <p>先將 Y:\portablegit\bin\sh.exe 改名為 sh_rename_for_solvespace.exe (透過 MSYS2 執行 shell 指令, 而非 portablegit 中的 sh.exe)</p>
 <p>git version 查驗 git 版本</p>
