--- a/config/content.htm
+++ b/config/content.htm
@@ -42,7 +42,7 @@
 <p>接著回到 solvespace 原始碼目錄, 建立 build 目錄後進入 build 目錄, 執行:</p>
 <p><span>cmake .. -G "MinGW Makefiles" -DCMAKE_BUILD_TYPE=Release</span><br/><span>mingw32-make</span></p>
 <p><span>編譯完成後, 可以在 build\bin 目錄中建立 solvespace.exe, 配合相關 dll 檔案後, 即可執行.</span></p>
-<p>week4</p>
+<p><span style="color: #ff0000;">week4</span></p>
 <p>自主練習</p>
 <p>week5</p>
 <p>solvespace操作</p>
@@ -55,6 +55,7 @@
 <p>7.完成</p>
 <p>以下是我的操作影片</p>
 <p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="//www.youtube.com/embed/6nf7AtP1cXo" width="560"></iframe></p>
+<p></p>
 <h2>week6-9</h2>
 <p><span style="color: #ff0000;">week6</span></p>
 <p>V-rep 網際 Python remote API ython remote API 雙輪車控制模擬</p>
