--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -62,7 +62,7 @@
 <p></p>
 <p><span style="color: #ff0000;">week7</span></p>
 <p>零件18</p>
-<p></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/pRJ7fh0RZMQ" width="560"></iframe></p>
 <h2>week10-14</h2>
 <h2>week15-18</h2>
 <h1>Note</h1>
