update week2 vedio

--- a/content/Week2-5.html
+++ b/content/Week2-5.html
@@ -163,11 +163,13 @@ img.add_border {
 <p>3.更改start裡編譯器的路徑到隨身碟的201906fall的data</p>
 <p>4.把倉儲從遠端拉到近端進行更新</p>
 <p>5.git clone 個人倉儲網址.git</p>
-<p>6.輸入git submodule add https://github.com/mdecourse/cmsimde.git cmsimde，載入cmsimde</p>
+<p>6.輸入git clone --recurse-submodules https://github.com/mdecourse/cmsimde.git cmsimde，載入cmsimde</p>
 <p>7.進入cmsimde開啟倉儲 輸入python wsgi.py</p>
 <p>8.如果flask沒更新，需輸入python -m pip install flask_cors，更新下載flask_cors</p>
 <p>9.到up_dir複製檔案到cad2019目錄下</p>
 <p>10.改完名字上傳即可</p>
+<p>以下是我的操作教學影片</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/_k2VWUpOIsY" width="560"></iframe></p>
 <p><span style="color: #ff0000;">week3</span></p>
 <h4>編譯步驟:</h4>
 <p>先將 Y:\portablegit\bin\sh.exe 改名為 sh_rename_for_solvespace.exe (透過 MSYS2 執行 shell 指令, 而非 portablegit 中的 sh.exe)</p>
@@ -193,7 +195,7 @@ img.add_border {
 <p>接著回到 solvespace 原始碼目錄, 建立 build 目錄後進入 build 目錄, 執行:</p>
 <p><span>cmake .. -G "MinGW Makefiles" -DCMAKE_BUILD_TYPE=Release</span><br/><span>mingw32-make</span></p>
 <p><span>編譯完成後, 可以在 build\bin 目錄中建立 solvespace.exe, 配合相關 dll 檔案後, 即可執行.</span></p>
-<p>week4</p>
+<p><span style="color: #ff0000;">week4</span></p>
 <p>自主練習</p>
 <p>week5</p>
 <p>solvespace操作</p>
