--- a/config/content.htm
+++ b/config/content.htm
@@ -65,6 +65,8 @@
 <p><span style="color: #ff0000;">week7</span></p>
 <p>零件18</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/_k2VWUpOIsY" width="560"></iframe></p>
+<p><span style="color: #ff0000;">week8</span></p>
+<p><span style="color: #000000;">ssh連線鑰匙</span></p>
 <h2>week10-14</h2>
 <h2>week15-18</h2>
 <h1>Note</h1>
