--- a/content/week6-9.html
+++ b/content/week6-9.html
@@ -162,6 +162,8 @@ img.add_border {
 <p><span style="color: #ff0000;">week7</span></p>
 <p>零件18</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/_k2VWUpOIsY" width="560"></iframe></p>
+<p><span style="color: #ff0000;">week8</span></p>
+<p><span style="color: #000000;">ssh連線鑰匙</span></p>
 <br />Week2-5 << <a href='Week2-5.html'>Previous</a> <a href='week10-14.html'>Next</a> >> week10-14</div>
         
     <!-- footer -->
