--- a/content/Week2-5.html
+++ b/content/Week2-5.html
@@ -156,7 +156,7 @@ img.add_border {
         </header>
     <div id="tipue_search_content">Week << <a href='Week.html'>Previous</a> <a href='week6-9.html'>Next</a> >> week6-9<br /><h1>Week2-5</h1>
 <p><span style="color: #ff0000;">week1</span></p>
-<p>中秋烤肉連假</p>
+<p><span style="color: #ff0000;">中秋節放假</span></p>
 <p><span style="color: #ff0000;">Week2</span></p>
 <p>1.建立一個新的倉儲命名為cad2019</p>
 <p>2.下載2b</p>
