update week13 reveal report and modify week font size

--- a/content/Week2-5.html
+++ b/content/Week2-5.html
@@ -155,9 +155,9 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Week << <a href='Week.html'>Previous</a> <a href='week6-9.html'>Next</a> >> week6-9<br /><h1>Week2-5</h1>
-<p><span style="color: #ff0000;">week1</span></p>
+<p><span size="4" style="font-size: large; color: #ff0000;">week1</span></p>
 <p><span style="color: #ff0000;">中秋節放假</span></p>
-<p><span style="color: #ff0000;">Week2</span></p>
+<p><span size="4" style="font-size: large; color: #ff0000;"><span size="4" style="font-size: large;">week2</span></span></p>
 <p>1.建立一個新的倉儲命名為cad2019</p>
 <p>2.下載2b</p>
 <p>3.更改start裡編譯器的路徑到隨身碟的201906fall的data</p>
@@ -170,7 +170,7 @@ img.add_border {
 <p>10.改完名字上傳即可</p>
 <p>以下是我的操作教學影片</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/_k2VWUpOIsY" width="560"></iframe></p>
-<p><span style="color: #ff0000;">week3</span></p>
+<p><span size="4" style="font-size: large; color: #ff0000;">week3</span></p>
 <h4>編譯步驟:</h4>
 <p>先將 Y:\portablegit\bin\sh.exe 改名為 sh_rename_for_solvespace.exe (透過 MSYS2 執行 shell 指令, 而非 portablegit 中的 sh.exe)</p>
 <p>git version 查驗 git 版本</p>
@@ -195,9 +195,9 @@ img.add_border {
 <p>接著回到 solvespace 原始碼目錄, 建立 build 目錄後進入 build 目錄, 執行:</p>
 <p><span>cmake .. -G "MinGW Makefiles" -DCMAKE_BUILD_TYPE=Release</span><br/><span>mingw32-make</span></p>
 <p><span>編譯完成後, 可以在 build\bin 目錄中建立 solvespace.exe, 配合相關 dll 檔案後, 即可執行.</span></p>
-<p><span style="color: #ff0000;">week4</span></p>
+<p><span size="4" style="font-size: large; color: #ff0000;">week4</span></p>
 <p>自主練習</p>
-<p>week5</p>
+<p><span size="4" style="font-size: large; color: #ff0000;">week5</span></p>
 <p>solvespace操作</p>
 <p>1.打開solvespace</p>
 <p>2.畫出一個正方體</p>
