--- a/content/week6-9.html
+++ b/content/week6-9.html
@@ -155,14 +155,14 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Week2-5 << <a href='Week2-5.html'>Previous</a> <a href='week10-14.html'>Next</a> >> week10-14<br /><h1>week6-9</h1>
-<p><span style="color: #ff0000;">week6</span></p>
+<p><span size="4" style="font-size: large; color: #ff0000;">week6</span></p>
 <p>V-rep 網際 Python remote API ython remote API 雙輪車控制模擬</p>
 <p><img caption="false" height="314" src="./../images/1_Kr-r8E0ExCQeu4AyPNq1eg.gif" width="560"/></p>
 <p></p>
-<p><span style="color: #ff0000;">week7</span></p>
+<p><span size="4" style="font-size: large; color: #ff0000;">week7</span></p>
 <p>零件18</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/bCLTkb9Ieg0" width="560"></iframe></p>
-<p><span style="color: #ff0000;">week8</span></p>
+<p><span size="4" style="font-size: large; color: #ff0000;">week8</span></p>
 <p><span style="color: #000000;">ssh連線鑰匙</span></p>
 <br />Week2-5 << <a href='Week2-5.html'>Previous</a> <a href='week10-14.html'>Next</a> >> week10-14</div>
         
