--- a/config/content.htm
+++ b/config/content.htm
@@ -100,7 +100,9 @@
 <p><strong><span size="4" style="font-size: large;">我的reveal報告</span></strong></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/VO4bPbI6ZxQ" width="560"></iframe></p>
 <h2>week15-18</h2>
-<h1>Note</h1>
+<p><big>week15查驗</big></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/9RxsQPFrlzk" width="560"></iframe></p>
+<p><span><span style="color: #00ffff;">心得</span>：在這學期我學到了許多東西，從一開始solidworks的繪圖到現在webots tutorial操作，要看懂NX原文書花了很多時間，不過持之以恆到最後我相信一定會有所成果。雖然我的進度比較慢，不過會慢慢跟上進度的。</span></p><h1>Note</h1>
 <p><span style="color: #ff0000;">git submodule add</span> https://github.com/mdecourse/cmsimde.git cmsimde 第一次把cmsimde載入倉儲使用<br/><span style="color: #ff0000;">python -m pip install flask_cors</span> 要更新下載flask_cors<br/><span style="color: #ff0000;">git clone --recurse-submodules</span> <span style="color: #00ff00;">https://github.com/solvespace/solvespace.git solvespace</span><br/>從遠端copy cmsimde必須，綠字部分改cmsimde的網址</p>
 <p>使用學校網路需用proxy</p>
 <p><span style="color: #ff0000;">[http]</span><br/><span style="color: #ff0000;"> proxy = [2001:288:6004:17::7]:3128</span></p>
