--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -70,7 +70,10 @@
 <h2>week10-14</h2>
 <p><span size="4" style="font-size: large; color: #ff0000;">week10</span></p>
 <p><span size="4" style="font-size: large;"><span size="4" style="font-size: large;">進行Solidworks, NX, Inventor 與 Creo (Pro/E) 的開發緣起/套件安裝/設定流程/零組件繪圖的相關差異與特點分析</span></span></p>
-<p></p>
+<p>Solidwork:這套CAD軟體幾乎每一年都有在改良，在它剛推出時就因價格低廉又好上手的強大吸引力，大受好評。</p>
+<p>NX:是這4套CAD軟體中最早出身的，它比較適合用在繪製模具那種高精度的物品。</p>
+<p><span>Inventor:目前它是最便宜的3D CAD軟體，性質上跟solidworks差不多。</span></p>
+<p><span>Creo (Pro/E):<span>作為當今世界機械</span><span>CAD/CAE/CAM</span><span>領域的新標準而得到業界的認可和推廣，是現今主流的模具和產品設計三維</span><span>CAD/CAM</span><span>軟件之一。</span></span></p>
 <p><span size="4" style="font-size: large; color: #ff0000;">week11</span></p>
 <p><span size="4" style="font-size: large;">Solidworks操作影片</span></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/SLB6WYHcBDw" width="560"></iframe></p>
@@ -97,7 +100,9 @@
 <p><strong><span size="4" style="font-size: large;">我的reveal報告</span></strong></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/VO4bPbI6ZxQ" width="560"></iframe></p>
 <h2>week15-18</h2>
-<h1>Note</h1>
+<p>week15查驗</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/9RxsQPFrlzk" width="560"></iframe></p>
+<p><span>心得：在這學期我學到了許多東西，從一開始solidworks的繪圖到現在webots tutorial操作，要看懂NX原文書花了很多時間，不過持之以恆到最後我相信一定會有所成果。雖然我的進度比較慢，不過會慢慢跟上進度的。</span></p><h1>Note</h1>
 <p><span style="color: #ff0000;">git submodule add</span> https://github.com/mdecourse/cmsimde.git cmsimde 第一次把cmsimde載入倉儲使用<br/><span style="color: #ff0000;">python -m pip install flask_cors</span> 要更新下載flask_cors<br/><span style="color: #ff0000;">git clone --recurse-submodules</span> <span style="color: #00ff00;">https://github.com/solvespace/solvespace.git solvespace</span><br/>從遠端copy cmsimde必須，綠字部分改cmsimde的網址</p>
 <p>使用學校網路需用proxy</p>
 <p><span style="color: #ff0000;">[http]</span><br/><span style="color: #ff0000;"> proxy = [2001:288:6004:17::7]:3128</span></p>
