--- a/content/week15-18.html
+++ b/content/week15-18.html
@@ -155,7 +155,9 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">week10-14 << <a href='week10-14.html'>Previous</a> <a href='Note.html'>Next</a> >> Note<br /><h1>week15-18</h1>
-<br />week10-14 << <a href='week10-14.html'>Previous</a> <a href='Note.html'>Next</a> >> Note</div>
+<p><big>week15查驗</big></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/9RxsQPFrlzk" width="560"></iframe></p>
+<p><span><span style="color: #00ffff;">心得</span>：在這學期我學到了許多東西，從一開始solidworks的繪圖到現在webots tutorial操作，要看懂NX原文書花了很多時間，不過持之以恆到最後我相信一定會有所成果。雖然我的進度比較慢，不過會慢慢跟上進度的。</span></p><br />week10-14 << <a href='week10-14.html'>Previous</a> <a href='Note.html'>Next</a> >> Note</div>
         
     <!-- footer -->
       <div class="container">
